<?xml version="1.0"?>
<package>
  <name>nxt_ros</name>
  <version>0.0.0</version>
  <description>The nxt_ros package</description>

  <maintainer email="thomas@todo.todo">thomas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>orocos_kdl</build_depend>
  <build_depend>nxt_msgs</build_depend>
  <build_depend>nxt_python</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>orocos_kdl</run_depend>
  <run_depend>nxt_msgs</run_depend>
  <run_depend>nxt_python</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
